# hermes-bacmap

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  README.md  mkdocs.yml  pixi.toml  project.md  pyproject.toml
.github/workflows/: ci.yml
.sisyphus/: ralph-loop.local.md
data/assemblies/SAM-ENT-004/: shovill.corrections
data/assemblies/SAM-INF-005/: shovill.corrections
data/reference/: tdh_vpara.fasta
data/reference/annotation/: prokka_is.fasta
data/reference/serotype/: shigella.fasta
data/reference/species/: markers.fasta
data/reference/virulence/: tdh.fasta  trh.fasta  vpara_targets.fasta
data/reference/vpa_serotype/: OAgc.gbk  ref_meta.pkl  ref_meta.sig
docs/: README.md  bacmap-migration-plan.md  features.md  getting-started.md  gom-architecture.md  hermes-chat-guide.md  index.md  known-issues.md  local-llm-setup.md  metadata-extensible-design.md  p3-skill-architecture.md  strain-metadata-design.md
docs/architecture/: code-quality.md  data-model.md  engine.md  gbrain.md  gom.md  overview.md  pipeline.md  skills.md
docs/cases/: batch-surveillance.md  outbreak.md  single-sample.md
docs/installation/: environment.md  local-llm.md  quick-start.md
docs/pathogens/: dec.md  salmonella.md  shigella.md  vpara.md
docs/reference/: changelog.md  databases.md  tools.md  troubleshooting.md
docs/usage/: cli.md  hermes-agent.md  web-ui.md
metadata_profiles/: cdc_china.yaml  default.yaml
scripts/: _common.py  assemble_gold_standard.sh  assembly_validation_blastn.sh  assembly_validation_minimap2.sh  download_gold_standard.py  generate_report.py  import_meta.py  ingest_results.py  run_analysis.py  species_validation_invA.sh  switch_llm.py
skills/analyze-salmonella/: SKILL.md
skills/analyze-salmonella/references/: pipeline-params.md  troubleshooting.md
skills/bio-router/: SKILL.md
skills/bioinfo-analysis/: SKILL.md
skills/interpret-results/: SKILL.md
skills/interpret-results/references/: amr-gene-reference.md
skills/run-pipeline/: SKILL.md
skills/run-pipeline/references/: dec-shigella.md
src/hermes_bacmap/: __init__.py  config.py  db.py  deterministic_verifier.py  ecoh_serotyper.py  failure_diagnostics.py  gene_scanner.py  genome_annotator.py  genome_object_service.py  lab_results.py  plugin.yaml  schemas.py  shigella_serotyper.py  species_identifier.py  strain_metadata.py  tools.py  utils.py  vpa_serotyper.py  vpa_serotyper_engine.py
src/hermes_bacmap/analysis/: __init__.py  deterministic_verifier.py  failure_diagnostics.py  (+4 more)
tests/: conftest.py  test_env.py
tests/unit/: test_analysis.py  test_cohort_ingest.py  test_config.py  test_db_and_plugin.py  test_deterministic_verifier.py  test_ecoh_serotyper.py  test_engine.py  test_engine_backends.py  test_engine_facade.py  test_engine_read_mapper.py  test_engine_utils_ext.py  test_failure_diagnostics_ext.py  test_gene_scanner.py  test_genome_annotator.py  test_genome_object_service.py  test_kma.py  test_sample_summary.py  test_shigella_serotyper.py  test_species_identifier.py  test_strain_index.py  test_strain_metadata.py  test_taxonomic_validator.py  test_taxonomic_validator_ext.py  test_tools_analysis.py  test_tools_cli.py  test_tools_seq.py  test_tools_services.py  test_utils.py  test_vpa_e2e.py  test_vpa_engine.py  test_vpa_serotyper.py  test_web_app.py
web/: app.py
web/templates/: index.html
workflows/bacmap/: Snakefile
workflows/salmonella/: Snakefile
(+71 files in other folders)
